small fix sur le code
